package edu.fiuba.algo3.modelo.Jugador;

import edu.fiuba.algo3.modelo.Jugador.Cartas.Carta;
import edu.fiuba.algo3.modelo.Recurso.*;
import javafx.scene.paint.Color;

import java.util.ArrayList;
import java.util.List;

public class Jugador {
    private final MazoDeRecursos recursos;
    private final Mano mano;
    private int puntos;
    private final String nombre;
    private final Color color;

    public Jugador(MazoDeRecursos gestor, Mano manoInicial, String nombre, Color color) {
        this.recursos = gestor;
        this.mano = manoInicial;
        this.nombre = nombre;
        this.puntos = 0;
        this.color = color;
    }

    public void descarteMayoria() {
        int cantidadRecursosADescartar = recursos.cantidadDescartar();
        recursos.descartarPorCantidad(cantidadRecursosADescartar);
    }

    public void agregarRecurso(Recurso recurso, int cantidad) {
        recurso.agregar(cantidad, recursos);
    }

    public void consumirRecursos(List<Recurso> precio) {
        recursos.verificarCumplimiento(precio);
        for(Recurso recurso: precio){
            recurso.eliminar(recursos);
        }
    }

    public Recurso obtenerRecursoAleatorio() {
        return recursos.obtenerRecursoAleatorio();
    }

    public void sumarPuntos(int puntos){
        this.puntos += puntos;
    }

    public void restarPuntos(int puntos){
        this.puntos -= puntos;
    }

    public int calcularPuntosTotales(){
        return this.puntos;
    }

    public int cantidadDeRecurso(Recurso recurso){
        return recurso.getCantidad(recursos);
    }

    public List<Integer> obtenerCantidadDeRecursos(){
        List<Integer> respuesta = new ArrayList<>();
        List<Recurso> recursos = new ArrayList<>(List.of(new Madera(),new Grano(),new Ladrillo(), new Lana(), new Mineral()));
        for (Recurso recurso : recursos) {
            respuesta.add(cantidadDeRecurso(recurso));
        }
        return respuesta;
    }
    public List<Carta> obtenerCartas(){
        return mano.dameLasCartas();
    }

    public void agregarCarta(Carta carta) {
        mano.agregar(carta);
    }

    public void descartarCarta(Carta carta) {
        mano.descartar(carta);
    }

    public String obtenerNombre() {
        return nombre;
    }

    public void agregarCaballero() { mano.agregarCaballero(); }

    public boolean tieneCartasDesarrollo() {
     return mano.cantidadCartas() > 0;
    }

    public int obtenerCantidadCaballeros(){
        return mano.obtenerCantidadCaballeros();
    }

    public void habilitarCartas() {
        mano.habilitarCartas();
    }

    public Color color(){
        return color;
    }

    public List<Recurso> obtenerRecursos() {
        return recursos.obtenerRecursos();
    }

    @Override
    public String toString() {
        return nombre;
    }

}