@startuml

class Jugador {
- Dictionary<String recurso, Int cantidad> recursos
+ agregarRecurso(String recurso, int cantidad)
}

abstract class Construccion{
- Int puntosDeVictoria
- Jugador dueño
- coeficienteDeProduccion
- List<Recurso> precio

+ producirRecurso(Recurso recurso)
}

class Poblado{
    + construir(jugador : Jugador) : Construccion
}

class Ciudad{
    + construir(jugador : Jugador) : Construccion
}

class Carretera{
    + construir(jugador : Jugador) : Construccion
}


Jugador "1" *-- "*" Construccion

Construccion <|-- Poblado
Construccion <|-- Ciudad
Construccion <|-- Carretera
@enduml